--- a/templates/partials/sliders.html
+++ b/templates/partials/sliders.html
@@ -10,7 +10,7 @@
             <div class="banner-info">
               <div class="container">
                 <div class="banner-info-bg mx-auto text-center">
-                  <h5>Towards Enhancement of Sceintific Knowledge</h5>
+                  <h5>Towards Enhancement of Sceintific Knowledge Sharing</h5>
                  <a class="btn btn-secondary btn-theme2 mt-md-5 mt-4" href="services.html">Read More</a>
                 </div>
                 
@@ -25,7 +25,7 @@
             <div class="banner-info">
               <div class="container">
                 <div class="banner-info-bg mx-auto text-center">
-                  <h5>Explore The World Of Our Graduates</h5>
+                  <h5>Explore The World Of Our Graduates and Future Researchers</h5>
                   <a class="btn btn-secondary btn-theme2 mt-md-5 mt-4" href="services.html">Read More</a>
                 </div>
               </div>
@@ -39,7 +39,7 @@
             <div class="banner-info">
               <div class="container">
                 <div class="banner-info-bg mx-auto text-center">
-                  <h5>Exceptional People, Exceptional Care</h5>
+                  <h5>Meet our Exceptional Staff, researchers and Innovators</h5>
                  <a class="btn btn-secondary btn-theme2 mt-md-5 mt-4" href="services.html">Read More</a>
                 </div>
               </div>
@@ -53,7 +53,7 @@
             <div class="banner-info">
               <div class="container">
                 <div class="banner-info-bg mx-auto text-center">
-                  <h5>Explore The World Of Our Graduates</h5>
+                  <h5>Know more about LUANAR’s research and Outreach activities</h5>
                   <a class="btn btn-secondary btn-theme2 mt-md-5 mt-4" href="services.html">Read More</a>
                 </div>
               </div>
