--- a/templates/partials/sliders.html
+++ b/templates/partials/sliders.html
@@ -10,7 +10,7 @@
             <div class="banner-info">
               <div class="container">
                 <div class="banner-info-bg mx-auto text-center">
-                  <h5>Towards Enhancement of Sceintific Knowledge Sharing</h5>
+                  <h5>Towards Enhancement of Scientific Knowledge Sharing</h5>
                  <a target="_blank" class="btn btn-secondary btn-theme2 mt-md-5 mt-4" href="https://luanar.ac.mw/luanar/research_services.php">Read More</a>
                 </div>
                 
