--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -9,16 +9,16 @@
                   <h6 class="footer-title-29">Contact Us</h6>
                   <ul>
                       <li><p><span class="fa fa-map-marker"></span> Bunda college campus<br> P.O. Box 219<br> Lilongwe 3<br> Malawi</p></li>
-                      <li><a href="tel:+265 1 277/222/260"><span class="fa fa-phone"></span> +(265)-255-999-888</a></li>
-                      <li><a href="mailto:corporate-mail@support.com" class="mail"><span class="fa fa-envelope-open-o"></span> research@luanar.ac.mw</a></li>
+                      <li><a href="tel:+265 1 277/222/260"><span class="fa fa-phone"></span> +265 277/222/260</a></li>
+                      <li><a href="mailto:research@luanar.ac.mw" class="mail"><span class="fa fa-envelope-open-o"></span> research@luanar.ac.mw</a></li>
                   </ul>
-                  <div class="main-social-footer-29">
+                  <!--<div class="main-social-footer-29">
                       <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
                       <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
                       <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
                       <a href="#google-plus" class="google-plus"><span class="fa fa-google-plus"></span></a>
                       <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
-                  </div>
+                  </div> -->
               </div>
               <div class="footer-list-29 footer-2">
                   <ul>
