--- a/templates/core/publication_details.html
+++ b/templates/core/publication_details.html
@@ -7,7 +7,7 @@
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
       <h2>{{ publication.title }}</h2>
-      <p><a href="{% url 'index' %}">Home</a> &nbsp; / &nbsp; Publications Details</p>
+      <p><a href="{% url 'index' %}">Home</a> &nbsp; / &nbsp; Publication Details</p>
     </div>
   </div>
 </section> 
@@ -19,23 +19,59 @@
             <div class="single-left">
               <div class="single-left1"> 
                 
-                <div class="column-6">
+                {% comment %} <div class="column-6">
                     <img src="{% static 'assets/images/pub_default.jpg' %}" alt="" class="img-fluid">
-                </div>
+                </div> {% endcomment %}
              
                 <div class="btom-cont1 pt-4">
                   <h5 class="card-title">{{ publication.title }}</h5>
                   <ul class="admin-post">
                     <li>
-                      <a href="#"> {{ publication.license }} | {{ publication.collection }}</a>
-                    </li>
+                      <a href="#">AUTHOR: &nbsp;{{publication.author.first_name}} {{publication.author.last_name}}
+                        </a> 
+                    </li><br/>
+                    {% if publication.co_authors %}
+                    <li>
+                        <a href="#"> CO-AUTHORS:&nbsp;
+                          {{publication.co_authors}}</a>
+                    </li><br/>
+                    {% endif %}
+                    <li>
+                      <a href="#">YEAR:&nbsp;
+                        {{publication.year_of_publication}}</a>
+                    </li><br/>
+                    <li>
+                      <a href="#">JOURNAL NAME:&nbsp;
+                        {{publication.journal_name}}</a>
+                    </li><br/>
+                    <li>
+                      <a href="#">VOLUME:&nbsp;
+                        {{publication.volume}}</a>
+                    </li><br/>
+                    <li>
+                      <a href="#">NUMBER OF PAGES:&nbsp;
+                        {{publication.number_of_pages}}</a>
+                    </li><br/>
+                    <li>
+                      <a href="#">PUBLISHER:&nbsp;
+                        {{publication.publisher}}</a>
+                    </li><br/>
+                    <li>
+                      <a href="http://dx.doi.org/{{publication.doi}}"
+                        target="_blank">URL:&nbsp;
+                        http://dx.doi.org/{{publication.doi}}</a>
+                    </li><br/>
                   </ul>
-                  <p class="mb-3" style="text-align: justify">{{ publication.abstract | striptags }}</p>
-                  <a
+                  <span>ABSTRACT<span/><br/><br/>
+                  <p class="mb-3" style="text-align: justify">
+                    
+                    {{ publication.abstract | striptags }}
+                  </p>
+                  {% comment %} <a
                     href="http://dx.doi.org/{{publication.doi}}"
-                    class="btn btn-theme2 mt-3" target="_blank"
-                    >Publication Link</a
-                  >
+                    class="btn btn-sm mt-3" target="_blank"
+                    >URL <br/><hr/> http://dx.doi.org/{{publication.doi}}</a
+                  > {% endcomment %}
               </div>
           </div>
             </div>
@@ -45,34 +81,23 @@
               <aside class="posts border">
                 <ul class="category">
                 <li>
-                  Author:
-                 <label>{{publication.author.first_name}} {{publication.author.last_name}}</label>
+                  <label> {{ publication.license }}</label>
                 </li>
                 <li>
-                  Year:
-                 <label>{{publication.year_of_publication}} </label>
-                </li>
-                <li>
-                  Volume:
-                 <label>{{publication.volume}}</label>
-                </li>
-                <li>
-                  Publisher:
-                 <label>{{publication.publisher}}</label>
-                </li>
-                                
+                  <label>{{ publication.collection }}</label>
+                </li>                
               </aside>
-
+{% comment %} 
               <aside class="posts p-4 border">
-                <h5 class="aside-title">More from author</h5>
+                <h5 class="aside-title">More From Author</h5>
                 <ul class="category">
                 <li>
-                  
-                    <a href="#link">
-
-                    <label></label></a>
+                  <a href="#link"
+                  >
+                  <label></label></a
+                  >
                 </li>
-              </aside>
+              </aside> {% endcomment %}
               <!-- contact -->
                 <!-- //contact -->    
               </div>
