--- a/templates/core/innovations.html
+++ b/templates/core/innovations.html
@@ -4,15 +4,29 @@
 
 {% block content %}
 
+
 {% if page_obj %}
-
-
-	<section class="w3l-blog-single">
+<section class="w3l-blog-single">
 	<div class="single blog py-4">
 		<div class="container py-md-2">
 		<div class="d-grid grid-colunm-2">
 			<!-- left side blog post content -->
-			<div class="single-left">
+			<div class="single-left"> 
+			
+				<form class="form-inline search-form mb-3" action="{% url 'innovations_search' %}" method="get">
+					
+					<input
+						class="form-control"
+						type="search"
+						name="query"
+						placeholder="Search by innovation title or author name"
+						aria-label="search"
+						required=""
+					/>
+					<button class="btn search" type="submit">
+						<span class="fa fa-search"></span>
+					</button>
+				</form>
 			<div class="single-left1">
                 {% for innovation in page_obj %}
                 {% if innovation.image_path %}
@@ -35,7 +49,7 @@
 					<ul class="admin-post">
 						<li>
 							<a><span class="fa fa-user"></span>
-								{{innovation.user.first_name}} {{innovation.user.last_name}}
+								{{innovation.user.title}} {{innovation.user.first_name}} {{innovation.user.last_name}}
 							</a>
 						</li>
 						{% if innovation.patent %}
@@ -96,22 +110,8 @@
 			<!-- left side blog post content -->
 
 			<!-- right side bar -->
-			<div class="right-side-bar">
-			<aside>
-				<h3 class="aside-title mb-3">Search</h3>
-				<form class="form-inline search-form" action="#" method="post">
-				<input
-					class="form-control"
-					type="search"
-					placeholder="Search here"
-					aria-label="email"
-					required=""
-				/>
-				<button class="btn search" type="submit">
-					<span class="fa fa-search"></span>
-				</button>
-				</form>
-			</aside>
+		
+			
 			<aside class="posts p-4 border">
 				<h3 class="aside-title">Categories</h3>
 				<ul class="category">
@@ -141,7 +141,7 @@
 				</li>
 				</ul>
 			</aside>
-			</div>
+			
 			<!-- //right side bar -->
 		</div>
 		</div>
