--- a/templates/research/all_publications.html
+++ b/templates/research/all_publications.html
@@ -17,8 +17,8 @@
 
 <div class="card-deck-xl">
     <div class="col-lg-12">
-
-    {% if object_list %}
+      {% comment %} {% if object_list %} {% endcomment %}
+    {% if publications %}
       <!-- grid column -->
       <div class="col-lg-12">
         <br>
@@ -41,7 +41,7 @@
               </thead><!-- /thead -->
               <!-- tbody -->
               <tbody>
-                  {% for publication in object_list %}
+                  {% for publication in publications %}
                 <tr>
                     <td>{{ publication.title }}</td>
                     <td>{{ publication.publication_type }}</td>
