--- a/templates/research/includes/side_bar_menu.html
+++ b/templates/research/includes/side_bar_menu.html
@@ -40,7 +40,7 @@
           </li><!-- /.menu-item -->
           <!-- .menu-item -->  
           <!-- .menu-item -->
-          <li  {% if 'add_publication' in request.path or 'publication' in request.path %}
+          <li  {% if 'add_publication' in request.path %}
                     class="menu-item has-child" style="border-bottom: 1px solid #E8E8E8"
                 {% else %}
                        class="menu-item" style="border-bottom: 1px solid #E8E8E8"
@@ -57,14 +57,26 @@
                    >
                 <a href="{% url 'add_publication' %}" class="menu-link">Add Articles</a>
               </li>
-              <li   {% if 'publication_list' in request.path %}
-                        class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
-                    {% else %}
-                        class="menu-item" style="border-bottom: 1px solid #E8E8E8"
-                    {% endif %}
-                >
-                <a href="{% url 'publication_list' %}" class="menu-link">All Articles</a>
-              </li>
+              {% if user.is_authenticated and user.position == 'Dro' %}
+                <li   {% if 'dro_publications' in request.path %}
+                          class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
+                      {% else %}
+                          class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                      {% endif %}
+                  >
+                  <a href="{% url 'dro_publications' %}" class="menu-link">All Articles</a>
+                </li>
+              {% else %}
+                <li {% if 'publication_list' in request.path %}
+                            class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
+                        {% else %}
+                            class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                        {% endif %}
+                    >
+                    <a href="{% url 'publication_list' %}" class="menu-link">All Articles</a>
+                  </li>
+              {% endif %}
+
               <li {% if 'approved_publications' in request.path %}
                       class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
                   {% else %}
@@ -76,7 +88,7 @@
             </ul><!-- /child menu -->
           </li><!-- /.menu-item -->
           <!-- .menu-item -->
-          <li {% if 'add_project' in request.path or 'research_project' in request.path %}
+          <li {% if 'add_project' in request.path %}
                 class="menu-item has-child" style="border-bottom: 1px solid #E8E8E8"
             {% else %}
                   class="menu-item" style="border-bottom: 1px solid #E8E8E8"
@@ -117,7 +129,7 @@
           <!-- .menu-item -->
 		  
 		  <!-- .menu-item -->
-          <li {% if 'add_innovation' in request.path or 'innovation' in request.path or 'innovations_waiting_approval' in request.path or 'innovation_list' in request.path or 'innovation_list' in request.path or 'approved_innovations' in request.path %}
+          <li {% if 'add_innovation' in request.path %}
                 class="menu-item has-child" style="border-bottom: 1px solid #E8E8E8"
             {% else %}
                   class="menu-item" style="border-bottom: 1px solid #E8E8E8"
