--- a/templates/research/includes/top_menu.html
+++ b/templates/research/includes/top_menu.html
@@ -8,7 +8,7 @@
    <div class="top-bar-brand">
      <!-- toggle aside menu -->
      <button class="hamburger hamburger-squeeze mr-2" type="button" data-toggle="aside-menu" aria-label="toggle aside menu"><span class="hamburger-box"><span class="hamburger-inner"></span></span></button> <!-- /toggle aside menu -->
-     <a href="{% url 'dashboard' %}">Research & Outreach</a>
+     <a href="{% url 'dashboard' %}">Research</a>
    </div><!-- /.top-bar-brand -->
    <!-- .top-bar-list -->
    <div class="top-bar-list">
