--- a/templates/core/innovations.html
+++ b/templates/core/innovations.html
@@ -48,7 +48,7 @@
 					</h5>
 					<ul class="admin-post">
 						<li>
-							<a><span class="fa fa-user"></span>
+							<a>
 								{{innovation.user.title}} {{innovation.user.first_name}} {{innovation.user.last_name}}
 							</a>
 						</li>
@@ -110,7 +110,7 @@
 			<!-- left side blog post content -->
 
 			<!-- right side bar -->
-		
+		<div class="right-side-bar">
 			
 			<aside class="posts p-4 border">
 				<h3 class="aside-title">Categories</h3>
