--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -105,7 +105,7 @@
 					  </div>
 					</div>
 					<div class="column2">
-						<a class="btn btn-secondary btn-theme2 mt-3" href="contact.html"> Read More</a>
+						<a class="btn btn-secondary btn-theme2 mt-3" href="#"> Read More</a>
 					</div>
 			</div>
 		</div>
