--- a/templates/core/innovation_details.html
+++ b/templates/core/innovation_details.html
@@ -32,9 +32,7 @@
                   <ul class="admin-post">
                     <li>
                       <a href=""><span class="fa fa-user"></span>
-
-                        {{innovation.user.first_name}} {{innovation.user.last_name}}
-
+                        {{innovation.user.title}} {{innovation.user.first_name}} {{innovation.user.last_name}}
                       </a>
                     </li>
                   </ul>
@@ -61,7 +59,7 @@
                                         <div class="cont-add-rgt">
                                           <h4>Innovator</h4><hr/>
                                           <p class="contact-text-sub">
-                                            {{innovation.user.first_name}} {{innovation.user.last_name}}</p>
+                                            {{innovation.user.title}} {{innovation.user.first_name}} {{innovation.user.last_name}}</p>
                                         </div>
                                     </div>
                                     <div class="cont-add add-2">     
