--- a/templates/core/publications.html
+++ b/templates/core/publications.html
@@ -58,7 +58,7 @@
 						<a href="{% url 'publication_details' publication.id %}"
 							class="text-bl">{{ publication.author.first_name }} {{ publication.author.last_name }}</a
 						>
-						</li>
+						</li><br/>
 						<li>
 						<a href="{% url 'publication_details' publication.id %}"
 							>{{ publication.co_authors }}</a
@@ -119,7 +119,8 @@
 			<!-- left side blog post content -->
 
 			<!-- right side bar -->
-			
+		<div class="right-side-bar">
+		
 			<aside class="posts p-4 border">
 				<h3 class="aside-title">Categories</h3>
 				<ul class="category">
@@ -149,7 +150,7 @@
 				</li>
 				</ul>
 			</aside>
-			</div>
+		</div>
 			<!-- //right side bar -->
 		</div>
 		</div>
