--- a/templates/research/includes/side_bar_menu.html
+++ b/templates/research/includes/side_bar_menu.html
@@ -36,9 +36,12 @@
                  class="menu-item" style="border-bottom: 1px solid #E8E8E8"
               {% endif %}
             >
-            <a href="{% url 'dashboard' %}" class="menu-link"><span class="menu-icon fas fa-home"></span> <span class="menu-text">Dashboard</span></a>
+            <a href="{% url 'dashboard' %}" class="menu-link"><span class="menu-icon oi oi-home"></span> 
+              <span class="menu-text">Dashboard</span></a>
           </li><!-- /.menu-item -->
-          <!-- .menu-item -->  
+              <li class="menu-item" style="border-bottom: 1px solid #E8E8E8">
+              <a href="#" class="menu-link"><span class="menu-icon oi oi-person"></span> <span class="menu-text">Profile</span></a>
+          </li><!-- /.menu-item -->
           <!-- .menu-item -->
           <li  {% if 'add_publication' in request.path %}
                     class="menu-item has-child" style="border-bottom: 1px solid #E8E8E8"
@@ -59,7 +62,7 @@
               </li>
               {% if user.is_authenticated and user.position == 'Dro' %}
                 <li   {% if 'dro_publications' in request.path %}
-                          class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
+                          class="menu-item" style="border-bottom: 1px solid #E8E8E8"
                       {% else %}
                           class="menu-item" style="border-bottom: 1px solid #E8E8E8"
                       {% endif %}
@@ -76,15 +79,25 @@
                     <a href="{% url 'publication_list' %}" class="menu-link">All Articles</a>
                   </li>
               {% endif %}
-
-              <li {% if 'approved_publications' in request.path %}
-                      class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
-                  {% else %}
-                      class="menu-item" style="border-bottom: 1px solid #E8E8E8"
-                  {% endif %}
-              >
-               <a href="{% url 'approved_publications' %}" class="menu-link">Approved Articles</a>
-              </li>
+              {% if user.is_authenticated and user.position == 'Dro' %}
+                  <li {% if 'approved_dro_publications' in request.path %}
+                  class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                      {% else %}
+                          class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                      {% endif %}
+                  >
+                  <a href="{% url 'approved_dro_publications' %}" class="menu-link">Approved Articles</a>
+                  </li>
+              {% else %}
+                <li {% if 'approved_publications' in request.path %}
+                        class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
+                    {% else %}
+                        class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                    {% endif %}
+                >
+                <a href="{% url 'approved_publications' %}" class="menu-link">Approved Articles</a>
+                </li>
+              {% endif %}
             </ul><!-- /child menu -->
           </li><!-- /.menu-item -->
           <!-- .menu-item -->
@@ -103,27 +116,58 @@
               >
                 <a href="{% url 'add_project' %}" class="menu-link">Add Project</a>
               </li>
-              <li {% if 'project_list' in request.path %}
-                    class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
-                {% else %}
+              {% if user.is_authenticated and user.position == 'Dro' %}
+                    <li {% if 'dro_projects' in request.path %}
                     class="menu-item" style="border-bottom: 1px solid #E8E8E8"
-                {% endif %}>
-                <a href="{% url 'project_list' %}" class="menu-link">All Projects</a>
-              </li>
-              <li {% if 'approved_projects' in request.path %}
-                    class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
-                {% else %}
-                    class="menu-item" style="border-bottom: 1px solid #E8E8E8"
-                {% endif %}>
-                <a href="{% url 'approved_projects' %}" class="menu-link">Approved Projects</a>
-              </li>
-              <li {% if 'projects_waiting_approval' in request.path %}
+                    {% else %}
+                        class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                    {% endif %}>
+                    <a href="{% url 'dro_projects' %}" class="menu-link">All Projects</a>
+                  </li>
+              {% else %}
+                  <li {% if 'project_list' in request.path %}
+                        class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
+                    {% else %}
+                        class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                    {% endif %}>
+                    <a href="{% url 'project_list' %}" class="menu-link">All Projects</a>
+                  </li>
+              {% endif %}
+
+              {% if user.is_authenticated and user.position == 'Dro' %}
+                <li {% if 'approved_dro_projects' in request.path %}
+                        class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                    {% else %}
+                        class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                    {% endif %}>
+                    <a href="{% url 'approved_dro_projects' %}" class="menu-link">Approved Projects</a>
+                  </li>
+              {% else %}
+                <li {% if 'approved_projects' in request.path %}
                       class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
                   {% else %}
                       class="menu-item" style="border-bottom: 1px solid #E8E8E8"
                   {% endif %}>
-                <a href="{% url 'projects_waiting_approval' %}" class="menu-link">Waiting Approval</a>
-              </li>
+                  <a href="{% url 'approved_projects' %}" class="menu-link">Approved Projects</a>
+                </li>
+              {% endif %}
+              {% if user.is_authenticated and user.position == 'Dro' %}
+                <li {% if 'waiting_dro_approval' in request.path %}
+                          class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                      {% else %}
+                          class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                      {% endif %}>
+                    <a href="{% url 'waiting_dro_approval' %}" class="menu-link">Waiting Approval</a>
+                  </li>
+              {% else %}
+                <li {% if 'projects_waiting_approval' in request.path %}
+                        class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                    {% else %}
+                        class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                    {% endif %}>
+                  <a href="{% url 'projects_waiting_approval' %}" class="menu-link">Waiting Approval</a>
+                </li>
+              {% endif %}
             </ul><!-- /child menu -->
           </li><!-- /.menu-item -->
           <!-- .menu-item -->
@@ -143,27 +187,57 @@
               {% endif %}>
                 <a href="{% url 'upload_innovation' %}" class="menu-link">Add Innovation</a>
               </li>
-              <li {% if 'innovation_list' in request.path %}
-                      class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
-                  {% else %}
-                      class="menu-item" style="border-bottom: 1px solid #E8E8E8"
-                  {% endif %}>
-                <a href="{% url 'innovation_list' %}" class="menu-link">All Innovations</a>
+              {% if user.is_authenticated and user.position == 'Dro' %}
+                <li {% if 'dro_innovations' in request.path %}
+                          class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                      {% else %}
+                          class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                      {% endif %}>
+                    <a href="{% url 'dro_innovations' %}" class="menu-link">All Innovations</a>
+                  </li>
+              {% else %}
+                <li {% if 'innovation_list' in request.path %}
+                        class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                    {% else %}
+                        class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                    {% endif %}>
+                  <a href="{% url 'innovation_list' %}" class="menu-link">All Innovations</a>
+                </li>
+              {% endif %}
+              {% if user.is_authenticated and user.position == 'Dro' %}
+              <li {% if 'approved_dro_innovations' in request.path %}
+                    class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                {% else %}
+                    class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                {% endif %}>
+                <a href="{% url 'approved_dro_innovations' %}" class="menu-link">Approved Innovations</a>
               </li>
+              {% else %}
               <li {% if 'approved_innovations' in request.path %}
-                    class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
+                    class="menu-item" style="border-bottom: 1px solid #E8E8E8"
                 {% else %}
                     class="menu-item" style="border-bottom: 1px solid #E8E8E8"
                 {% endif %}>
                 <a href="{% url 'approved_innovations' %}" class="menu-link">Approved Innovations</a>
               </li>
+              {% endif %}
+              {% if user.is_authenticated and user.position == 'Dro' %}
+              <li {% if 'innovations_waiting_dro_approval' in request.path %}
+                      class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                  {% else %}
+                      class="menu-item" style="border-bottom: 1px solid #E8E8E8"
+                  {% endif %}>
+                <a href="{% url 'innovations_waiting_dro_approval' %}" class="menu-link">Waiting Approval</a>
+              </li>
+              {% else %}
               <li {% if 'innovations_waiting_approval' in request.path %}
-                      class="menu-item has-active" style="border-bottom: 1px solid #E8E8E8"
+                      class="menu-item" style="border-bottom: 1px solid #E8E8E8"
                   {% else %}
                       class="menu-item" style="border-bottom: 1px solid #E8E8E8"
                   {% endif %}>
                 <a href="{% url 'innovations_waiting_approval' %}" class="menu-link">Waiting Approval</a>
               </li>
+              {% endif %}
             </ul><!-- /child menu -->
           </li><!-- /.menu-item -->
           <!-- .menu-item -->
